@@ -41,8 +41,8 @@ func main() {
 
 	svcFlag := flag.String("service", "", fmt.Sprintf("Control the system service: %q", service.ControlAction))
 	version := flag.Bool("version", false, "print current proxy version")
-	resolve := flag.String("resolve", "", "resolve a name using system libraries")
 	flags := ConfigFlags{}
+	flags.Resolve = flag.String("resolve", "", "resolve a DNS name (string can be <name> or <name>,<resolver address>)")
 	flags.List = flag.Bool("list", false, "print the list of available resolvers for the enabled filters")
 	flags.ListAll = flag.Bool("list-all", false, "print the complete list of available resolvers, ignoring filters")
 	flags.JSONOutput = flag.Bool("json", false, "output list as JSON")
@@ -56,10 +56,6 @@ func main() {
 
 	if *version {
 		fmt.Println(AppVersion)
-		os.Exit(0)
-	}
-	if resolve != nil && len(*resolve) > 0 {
-		Resolve(*resolve)
 		os.Exit(0)
 	}
 
